# rocket-chip-driver

./: .gitignore  Cargo.toml  LICENSE  Makefile  Readme.md  build.rs  verilog2btor.tcl
.github/workflows/: test.yml
.github/workflows/setup-bitwuzla/: action.yml
.github/workflows/setup-yices/: action.yml
bmc/: Cargo.toml
bmc/src/: main.rs
cpp-src/: Makefile  emulator.cc
cpp-src/riscv-fesvr/fesvr/: dmi.h  dtm.h
examples/: bmc.rs  sim.rs
inputs/coward/: datapath_verification_fig1.md  datapath_verification_fig1_impl.v  datapath_verification_fig1_spec.btor  detapath_verification_fig1_miter.v
inputs/repair/: llsdspi_bug_c1.instrumented.btor
inputs/smtlib/: arbiter_array_cex_w32d32q16n4b34.smt2
patronus/: Cargo.toml
patronus-dse/: Cargo.toml
patronus-dse/src/: engine.rs  value_summary.rs
patronus-egraphs/: .gitignore  Cargo.toml
patronus-egraphs-cond-synth/: Cargo.toml
patronus-egraphs/src/: arithmetic.rs  dot.rs  lib.rs  rewrites.rs
patronus/examples/: sim.rs
patronus/inputs/coward/: datapath_verification_fig1_impl.btor  datapath_verification_fig1_spec.v
patronus/src/: btor2.rs  egraphs.rs  expr.rs  lib.rs  mc.rs  sim.rs  smt.rs
patronus/src/btor2/: parse.rs  serialize.rs  witness.rs
patronus/src/dse/: value_summary.rs
patronus/src/egraphs/: arithmetic.rs
patronus/src/expr/: context.rs  eval.rs  foreach.rs  graphviz.rs  meta.rs  nodes.rs  parse.rs  serialize.rs  simplify.rs  transform.rs  types.rs
patronus/src/mc/: smt.rs  types.rs
patronus/src/sim/: interface.rs  interpreter.rs  jit.rs
patronus/src/sim/jit/: bv_codegen.rs  compiler.rs  runtime.rs
patronus/src/smt/: convert.rs  parse.rs  parser.rs  serialize.rs  solver.rs
patronus/src/system/: analysis.rs  serialize.rs  transform.rs  transition_system.rs
patronus/src/system/snapshots/: patronus__system__analysis__tests__cone_of_influence-2.snap  patronus__system__analysis__tests__cone_of_influence.snap
patronus/tests/: btor2_test.rs  interpreter.rs  simplify.rs  simulator.rs
patronus/tests/snapshots/: btor2_test__parse_lakeroad_dsp48_e2.snap  btor2_test__parse_sdram_and_simplify_expressions.snap  btor2_test__parse_sha3_keccak_and_check_that_all_anonymous_inputs_are_there.snap  btor2_test__parse_sha3_keccak_and_replace_anonymous_inputs.snap  btor2_test__serialize_inverter.snap
resources/: Makefile
resources/cxx/riscv-fesvr/fesvr/: dtm.cc  dtm.h
resources/verilog/: SimDTM.v
sim/: Cargo.toml
sim/src/: main.rs
src/: lib.rs  macros.rs  sym.rs
src/btor2/: parse.rs  serialize.rs
src/dse/: engine.rs  value_summary.rs
src/egraphs/: arithmetic.rs  mod.rs
src/expr/: context.rs  eval.rs  expr.rs  meta.rs  mod.rs  parse.rs  serialize.rs  simplify.rs  transform.rs  traversal.rs  type_check.rs  types.rs
src/ir/: analysis.rs  context.rs  expr.rs  serialize.rs  transform.rs  transition_system.rs  traversal.rs  type_check.rs
src/mc/: smt.rs
src/sim/: interface.rs  interpreter.rs  mod.rs
src/smt/: parse.rs  serialize.rs
src/sym/: engine.rs  eval.rs  mod.rs  value_summary.rs
src/system/: analysis.rs  mod.rs  serialize.rs  transform.rs  transition_system.rs
tests/: btor2_test.rs  interpreter.rs  simplifications.rs  simplify.rs
tests/snapshots/: btor2_test__parse_count2.snap  btor2_test__parse_instrumented_decoder.snap  btor2_test__parse_lakeroad_dsp48_e2.snap  btor2_test__parse_quiz1.snap  btor2_test__parse_sdram.snap  btor2_test__parse_sdram_and_remove_anonymous_inputs.snap  btor2_test__parse_sdram_and_simplify_expressions.snap  btor2_test__parse_sha3_keccak_and_check_that_all_anonymous_inputs_are_there.snap  btor2_test__parse_sha3_keccak_and_replace_anonymous_inputs.snap  btor2_test__serialize_pass_through.snap  btor2_test__serialize_quiz1.snap
tools/bmc/: Cargo.toml
tools/bmc/src/: main.rs
tools/egraphs-cond-synth/: .gitignore  Cargo.toml
tools/egraphs-cond-synth/src/: features.rs  main.rs  rewrites.rs  samples.rs  summarize.rs
tools/graphviz/: Cargo.toml
tools/graphviz/src/: main.rs
tools/sim/: Cargo.toml
tools/sim/src/: main.rs
tools/simplify/: Cargo.toml
tools/simplify/src/: main.rs
tools/view/: Cargo.toml
tools/view/src/: main.rs
