[workspace]
resolver = "2"
members = [ "bmc","patronus", "patronus-egraphs", "patronus-egraphs-cond-synth", "sim"]

[workspace.package]
edition = "2021"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
repository = "https://github.com/cucapra/patronus"
readme = "Readme.md"
license = "BSD-3-Clause"
rust-version = "1.73.0"

[workspace.dependencies]
rustc-hash = "2.x"
baa = "0.14.5"
egg = "0.9.5"
clap =  { version = "4.x", features = ["derive"] }

# speed up execution of tests using insta
[profile.dev.package]
insta.opt-level = 3

# include debug information for profiling
[profile.release]
debug = true
