[workspace]
resolver = "2"
members = ["patronus", "patronus-egraphs", "patronus-dse", "tools/bmc", "tools/egraphs-cond-synth", "tools/sim", "tools/simplify"]

[workspace.package]
edition = "2021"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
repository = "https://github.com/cucapra/patronus"
readme = "Readme.md"
license = "BSD-3-Clause"
rust-version = "1.73.0"

[workspace.dependencies]
rustc-hash = "2.x"
baa = { version = "0.16.9", features = ["rand1"] }
egg = "0.9.5"
regex = "1.11.1"
boolean_expression = "0.4.4"
clap =  { version = "4.x", features = ["derive"] }
patronus = {path = "patronus"}
thiserror = "2.0.6"

# speed up execution of tests using insta
[profile.dev.package]
insta.opt-level = 3

# include debug information for profiling
[profile.release]
debug = true

# for samply: https://github.com/mstange/samply/?tab=readme-ov-file#turn-on-debug-info-for-full-stacks
[profile.profiling]
inherits = "release"
debug = true
