[package]
name = "patronus"
version = "0.34.0"
description = "Hardware bug-finding toolkit."
homepage = "https://kevinlaeufer.com"
keywords = ["RTL", "btor", "model-checking", "SMT", "bit-vector"]
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
indexmap = "2.7.0"
codespan-reporting = "0.11.1"
lazy_static = "1.4.0"
smallvec = { version = "1.x", features = ["union"] }
rand = { version = "0.8.5", features = ["small_rng"] }
boolean_expression.workspace = true
regex.workspace = true
baa.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
cranelift = { version = "0.120.0", features = ["module", "jit"] }
inventory = "0.3.20"
fixedbitset = "0.5.7"
paste = "1.0.15"

[dev-dependencies]
insta = { version = "1.x", features = ["yaml"] }

[features]
trace = []
