[package]
name = "bmc"
version = "0.1.0"
description = "A simple bounded model checking tool based on the patronus library."
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
patronus.workspace = true
clap.workspace = true
